--- a/public/style.css
+++ b/public/style.css
@@ -11,11 +11,16 @@ body {
     font-family: 'Rubik', sans-serif;
     background-color: hsl(226, 43%, 10%);
     color: white;
+
+    width: 100vw;
+}
+
+#root {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    width: 100%;
 }
 
 img {
@@ -40,7 +45,7 @@ button:active, button:visited {
 }
 
 .grid {
-    margin-top: 20px;
+    margin: 20px auto;
     width: 90%;
     display: grid;
     grid-gap: 20px;
@@ -244,7 +249,7 @@ h1 {
     display: block;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 700px) {
 
     body {
         display: flex;
